--- a/action.yml
+++ b/action.yml
@@ -1,10 +1,6 @@
-name: 'Node 12 Template Action'
-description: 'Get started with Node actions'
-author: 'GitHub'
-inputs:
-  myInput:
-    description: 'Input to use'
-    default: 'world'
+name: 'Tangro Coverage'
+description: 'Run code coverage, set a status and zip the coverage report'
+author: 'tangro'
 runs:
   using: 'node12'
-  main: 'lib/main.js'
+  main: 'dist/index.js'
