--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -24,3 +24,5 @@ jobs:
         git add -A
         git commit -m "released new version"
         git push
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
