--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,8 +21,9 @@ jobs:
       run: npm run build
     - name: add and push origin $(node -p -e "require('./package.json').version")
       run: |
+        header=$(echo -n "ankri:${INPUT_GITHUB_TOKEN}" | base64)
         git add -A
         git commit -m "released new version"
-        git push
+        git -c http.extraheader="AUTHORIZATION: basic $header" push
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
