--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,11 +19,11 @@ jobs:
       run: npm install
     - name: run build
       run: npm run build
-    - name: add and push origin $(node -p -e "require('./package.json').version")
+    - name: add and push 
       run: |
         header=$(echo -n "ankri:${INPUT_GITHUB_TOKEN}" | base64)
         git add -A
         git commit -m "released new version"
-        git -c http.extraheader="AUTHORIZATION: basic $header" push
+        git -c http.extraheader="AUTHORIZATION: basic $header" push origin $(node -p -e "require('./package.json').version")
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
