--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,9 +21,8 @@ jobs:
       run: npm run build
     - name: add and push 
       run: |
-        header=$(echo -n "ankri:${{ secrets.GITHUB_TOKEN }}" | base64)
         git add -A
         git commit -m "released new version"
-        git -c http.extraheader="AUTHORIZATION: basic $header" push origin $(node -p -e "require('./package.json').version")
+        git -c http.extraheader="AUTHORIZATION: basic $(echo -n "ankri:${{ secrets.GITHUB_TOKEN }}" | base64)" push origin $(node -p -e "require('./package.json').version")
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
