--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,8 +21,9 @@ jobs:
       run: npm run build
     - name: add and push 
       run: |
+        git config user.name "${{ github.actor }}"
+        git config user.email "${{ github.actor }}@users.noreply.github.com"
         git add -A
-        git config user.name ${{ github.actor }}
         git commit -m "released new version"
         git push origin $(node -p -e "require('./package.json').version")
       env:
