--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,10 +21,8 @@ jobs:
       run: npm run build
     - name: add and push 
       run: |
-        git config user.name "${{ github.actor }}"
-        git config user.email "${{ github.actor }}@users.noreply.github.com"
+        git config user.name "${{ secrets.RELEASE_USERNAME }}"
+        git config user.email "${{ secrets.RELEASE_USERNAME }}@users.noreply.github.com"
         git add -A
         git commit -m "released new version"
-        git push https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git $(node -p -e "require('./package.json').version")
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        git push https://${{ secrets.RELEASE_TOKEN }}@github.com/${{ github.repository }}.git $(node -p -e "require('./package.json').version")
