--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
   "dependencies": {
     "@actions/core": "^1.0.0",
     "@actions/exec": "^1.0.0",
-    "@actions/github": "^1.0.0",
+    "@tangro/tangro-github-toolkit": "0.1.2",
     "lodash": "^4.17.15"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.13",
+    "@types/jest": "^24.0.18",
     "@types/lodash": "^4.14.138",
-    "@types/node": "^12.0.4",
+    "@types/node": "^12.7.3",
     "@zeit/ncc": "^0.20.4",
-    "jest": "^24.8.0",
-    "jest-circus": "^24.7.1",
+    "jest": "^24.9.0",
+    "jest-circus": "^24.9.0",
     "ts-jest": "^24.0.2",
-    "typescript": "^3.5.1"
+    "typescript": "^3.6.2"
   }
 }
