--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,9 +22,11 @@ jobs:
       - name: run build
         run: npm run build
       - name: add and push
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         run: |
-          git config user.name "${{ secrets.RELEASE_USERNAME }}"
-          git config user.email "${{ secrets.RELEASE_USERNAME }}@users.noreply.github.com"
+          git config user.name "$GITHUB_ACTOR"
+          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
           git add -A
           git commit -m "released new version"
-          git push --force https://${{ secrets.RELEASE_TOKEN }}@github.com/${{ github.repository }}.git $(node -p -e "require('./package.json').version")
+          git push --force https://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY $(node -p -e "require('./package.json').version")
