--- a/package.json
+++ b/package.json
@@ -11,19 +11,15 @@
   "author": "ankri",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.0.0",
-    "@actions/exec": "^1.0.0",
-    "@tangro/tangro-github-toolkit": "^0.4.0",
-    "lodash": "^4.17.15"
+    "@actions/core": "1.2.3",
+    "@actions/exec": "1.0.3",
+    "@tangro/tangro-github-toolkit": "1.0.0",
+    "lodash": "4.17.15"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.18",
-    "@types/lodash": "^4.14.138",
-    "@types/node": "^12.7.3",
-    "@zeit/ncc": "^0.20.4",
-    "jest": "^24.9.0",
-    "jest-circus": "^24.9.0",
-    "ts-jest": "^24.0.2",
-    "typescript": "^3.6.2"
+    "@types/lodash": "4.14.149",
+    "@types/node": "13.7.7",
+    "@zeit/ncc": "0.21.1",
+    "typescript": "3.8.3"
   }
 }
